# purser-3

./: .gitignore  README.md  main.py  pyproject.toml
.beads/: metadata.json
.claude/commands/: purser-add-spec.md  purser-build-all.md  purser-build.md  purser-plan.md
.github/prompts/: purser-add-spec.prompt.md  purser-build-all.prompt.md  purser-build.prompt.md  purser-plan.prompt.md
.purser/: README.md
.purser/codex/: purser-add-spec.md  purser-build-all.md  purser-build.md  purser-plan.md
.purser/commands/: purser-add-spec.md  purser-build-all.md  purser-build.md  purser-plan.md
docs/: github-sync.md
skills/: README.md
skills/duckdb/: SKILL.md
skills/github-cli/: SKILL.md
specs/: 2026-03-31-add-bd-init-to-purser-init.md  2026-03-31-gh-issue-project-sync.md  2026-04-01-upgrade-readme-with-mermaid-director-guide.md
src/purser/: __init__.py  cli.py  framework.py  github_sync.py  github_workflow.py  templates.py
tests/: test_cli.py
